--- a/Documents/contact.html
+++ b/Documents/contact.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    html {background: palegoldenrod;}
+  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html>
 <h1>Contact Me</h1>
 <p>Mobile: 240 246 4764</p>
 <p>Email: kurty86x@yahoo.com</p>
