--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <h2>Summary/Objective</h2>
     <p>
         Innovative IT Specialist with 10+ years experience who is able to perform Systems Administration tasks   
-        and also has the ability to perform Web Development tasks using programming languages like 
-        HTML, CSS, Javascript and Python. Seeking for an opportunity to level up and learn new skills in various
-        IT Technology. Demonstrated Team player and hardworker. Easily trained and ability to learn quickly.
+        on Windows and Linux Servers. Knowledged and with some experience with programming/scripting languages 
+        like HTML, CSS, Java, Python, Powershell and bash. Involvement with security task such as remediating
+        vulnerabilities found in Nessus and Splunk using management tools like SCCM and BigFix. 
+        Seeking for an opportunity to level up and learn new skills in various IT Technology. 
+        Demonstrated Team player and hardworker. Easily trained and ability to learn quickly.
     </p>
     <hr />
 <!--Educations-->
@@ -61,9 +63,9 @@
                SCCM, Citrix, SCOM, VxRail, Intune, BigFix, Zscaler, Airwatch</li>
         <br />
         <li><b>Security Applications and Pentest tools:</b> Splunk, Nessus, Nmap, Wireshark, Hydra McAfee VirusScan Enterprise, 
-               Proofpoint, Endpoint Encryption, Entrust, Bitlocker, RSA, CyberArc</li>
+               Proofpoint, Endpoint Encryption, Entrust, Bitlocker, RSA, CyberArc, Crowdsdtrike</li>
         <br />
-        <li><b>Software/Web Development:</b> Powershell, HTML, CSS, Javascript,GitHub, </li>
+        <li><b>Software/Web Development:</b> Powershell, HTML, CSS, Javascript,GitHub, bash </li>
         <br />
         <li><b>Backup:</b> VEAAM, Avamar, Backupexec</li>
         <br />
@@ -84,6 +86,9 @@
        <p>September 2021 - April 2024</p>
        <ul>
             <li>Migrated Backup Jobs from VEEAM to AVAMAR</li>
+            <li>Assisted with setting up image and file level backup policies on Avamar and PPDM
+                and duplicating to AWS backup.</li>
+            <li>Deploying Servers on AWS and storage monitor</li>
             <li>Responsible gathering IT Operations Report from SCOM, SCCM and Nessus and 
             to ensure that all systems are up and running. </li>
             <li>Upgraded SCOM 2012 to SCOM 2016 and setup monitoring capabilities to AWS environment</li>
@@ -225,6 +230,7 @@
             <li>Communicate with customers to ensure support needs are met.</li>
             <li>Building, imaging and deploying desktops and laptops using SCCM (System Center Configuration Manager)</li>
             <li>Blackberry and iPhone support (mail and functionality issue)</li>
+            <li>Mobile management using Intune.</li>
             <li>Troubleshoot network connectivity issues. (Wired and Wireless)</li>
             <li>Create, delete and modify User and computer accounts in Active Directory</li>
             <li>Minimal support with Cisco phones (Configuration)</li>
