--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <style>
-        html {background: teal;}
+        html {background: white;}
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -275,7 +275,7 @@
     <p><a href="./Documents/contact.html">Contact me</a></p>
 
 <footer>
-    <p></p>© Kurt Berglund . All Rights Reserved.</p>
+    <p></p>© Kurt Berglund</p>
 </footer>  
                 
 </body>
