--- a/index.html
+++ b/index.html
@@ -80,7 +80,35 @@
     <hr />
 <!--Work Experience-->
     <h2>Work Experience</h2>
-<!--DOJ--> 
+<!--NIST/NCCOE-->
+    <ul>
+        <li><h3>Systems/Network Engineer - ITC Federal Supporting National Cybersecurity Center of Excellence</h3></li>
+        <p>July 2024 - Present</p>
+        <ul>
+            <li>Juniper to Cisco switch migration for all lab environments</li>
+            <li>Setup lab networks per requests</li>
+            <li>Administer, Maintain and configure all Linux Servers (Redhat)</li>
+            <li>Assisted with reviewing and maintaining security policies on Paloalto and Cisco Firepowers</li>
+            <li>Assist with redesigning and rebuilding network infrastructure</li>
+                <ul>
+                    <li>Spine Leaf architecture with VMWare NSX</li>
+                    <li>Replacing Juniper Network devices with Cisco devices on NCCoE production Networks</li>
+                    <li>Replace Aruba wireless system with Meraki Wireless system</li>
+                </ul>
+            <li>Administer Aruba Wireless Network</li>
+            <li>Assisted with troubleshooting VPN Access for remote users (Global Protect and RSA SecureID)</li>
+            <li>Assisted with troubleshooting Network connectivity issues</li>
+            <li>User Audit Reporting using Powershell scripts</li>
+            <li>SSL Certificate renewals</li>
+            <li>Remediate vulnerabilites found from tenbale/Nessus scans</li>
+            <li>Administer DNS requests using Infoblox and bindservers runnning on Redhat</li>
+            <li>Assisted Audio/Video Engineer with Extron Devices and networking. Conference room setups</li>
+            <li>Monitor Networked assets using Solarwinds and VMWare Operations for Logs</li>
+            <li>Onboarding process for Lab Users/Collaborators (Network access, AD Accounts, ServiceNow Accounts, GPO</li>
+        </ul>
+    </ul>
+    <br />
+    <!--DOJ--> 
     <ul>
        <li><h3>Systems Engineer - Tria Federal Supporting Department of Justice</h3></li>
        <p>September 2021 - April 2024</p>
@@ -137,6 +165,7 @@
                 </ul>
        </ul>
        <br />
+        <!--DOE-->
        <li><h3>IT Support Specialist - OneSource Supporting Department of Energy</h3></li> 
        <p>October 2020 - September 2021</p>
        <ul>
@@ -280,3 +309,4 @@
                 
 </body>
 </html>
+
