--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@
         <li><b>IT Management:</b> Technical Writing / Documentation, Leadership and Supervision, Communication,
                Project Management, Time Management, Strategic Thinking, Human and Interpersonal Management</li>
         <br />
-        <li><b>Operating Systems:</b> Windows Server 2019, Windows 10 | 11, MacOS, Kali, centOS, Redhat, IOS, Android,</li>
+        <li><b>Operating Systems:</b> Windows Server 2022, Windows 11, MacOS, Kali, centOS, Redhat, Suse, IOS, Android,
+               Junos</li>
         <br />
-        <li><b>Desktop Applications:</b> MS Office 2019, MS Access, Visio, Adobe Acrobat, Libre Office, Photoshop, 
+        <li><b>Desktop Applications:</b> MS Office, MS Access, Visio, Adobe Acrobat, Libre Office, Photoshop, 
                Internet Explorer, Firefox, Chrome, Tor, Windows Media Player, VLC, iTunes, Thunderbird, Slack, Visual Studio Code, 
                Zoom</li>
         <br />
         <li><b>Administration and Networking:</b> Active Directory, DNS. DHCP, Exchange, Office365, LAN, WAN, WLAN, 
                SQL Server, TCP/IP, SonicWALL, Cisco Routers and Switches, Cisco ASA, Cisco Meraki, Patching and Cabling (Ethernet), 
                VMWare, Hyper-V, Sun xVM Virtual Box, Microsoft Virtual PC, WSUS, IIS, Azure, Business Desktop Deployment (BDD), 
-               SCCM, Citrix, SCOM, VxRail, Intune, BigFix, Zscaler, Airwatch</li>
+               SCCM, Citrix, SCOM, VxRail, Intune, BigFix, Zscaler, Airwatch, Infoblox, Solarwinds Orion, Ansible</li>
         <br />
         <li><b>Security Applications and Pentest tools:</b> Splunk, Nessus, Nmap, Wireshark, Hydra McAfee VirusScan Enterprise, 
                Proofpoint, Endpoint Encryption, Entrust, Bitlocker, RSA, CyberArc, Crowdsdtrike</li>
@@ -69,7 +70,7 @@
         <br />
         <li><b>Backup:</b> VEAAM, Avamar, Backupexec</li>
         <br />
-        <li><b>Hardware:</b> Dell, HP, Cisco, Netgear Polycom, MS Surface, Apple,</li>
+        <li><b>Hardware:</b> Dell, HP, Cisco, Juniper, Netgear Polycom, MS Surface, Apple,</li>
         <br />
         <li><b>Storage:</b> DELL PowerProtect Data Manager, Dell Equalogic</li>
         <br />
@@ -165,7 +166,7 @@
                 </ul>
        </ul>
        <br />
-        <!--DOE-->
+       <!--DOE-->
        <li><h3>IT Support Specialist - OneSource Supporting Department of Energy</h3></li> 
        <p>October 2020 - September 2021</p>
        <ul>
@@ -309,4 +310,5 @@
                 
 </body>
 </html>
+
 
