--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <h2>Work Experience</h2>
 <!--NIST/NCCOE-->
     <ul>
-        <li><h3>Systems/Network Engineer - ITC Federal Supporting National Cybersecurity Center of Excellence</h3></li>
+        <li><h3>Systems/Network Engineer - ITC Federal Supporting National Cybersecurity Center of Excellence / National Institute of Standards and Technology</h3></li>
         <p>July 2024 - Present</p>
         <ul>
             <li>Juniper to Cisco switch migration for all lab environments</li>
@@ -273,7 +273,7 @@
             <li>Replacing and installing hardware on laptops (Lenovo)</li>
        </ul>
        <br />
-       <li><h3>HelpDesk Analyst/Service Desk Analyst - Powertek supporting National Institute of Technology</h3></li>
+       <li><h3>HelpDesk Analyst/Service Desk Analyst - Powertek supporting National Institute of Standards and Technology</h3></li>
        <p>June 2010 - February 2012</p>
        <ul>
             <li>Provide critical first-line technical support for: Windows based laptops, desktops, Printers, 
@@ -310,5 +310,6 @@
                 
 </body>
 </html>
+
 
 
