--- a/Documents/References.html
+++ b/Documents/References.html
@@ -18,6 +18,14 @@
 <h1>References</h1>
 <hr />
 <hr />
+<!--Sergio Marroquin-->
+    <h2>Sergio Marroquin</h2>
+    <p>
+        Professional - NIST (Service Desk Operations) <br/>
+        Email:smarr714@gmail.com <br />
+        Phone: 240 715 2237<br />
+    </p>
+<hr />
 <!--Moe Popal-->
     <h2>Moe Popal</h2>
     <p>
@@ -26,6 +34,7 @@
         Phone: 703 906 5106<br />
     </p>
 <hr />
+<!--Usman-->
     <h2>Sheikh Ahmed (Usman)</h2>
     <p>
         Professional - TRIA (Systems Engineer - Team Lead) <br />
@@ -33,6 +42,7 @@
         Phone: 713 396 9806 <br />
     </p>
 <hr />
+<!--Steve Bashardost-->
     <h2>Steve Bashardost</h2>
     <p>
        Professional - TRIA (Project Manager) <br />
@@ -40,6 +50,7 @@
        Phone:202 841 2052 <br />
     </p>
 <hr />
+<!--Michael W. Johnson-->
     <h2>Michael W. Johnson</h2>
     <p>
        Professional - Department of Justice  (Supervisory IT Specialist) <br />
@@ -47,6 +58,7 @@
        Phone (work): 202 305 4178 <br />
     </p>
 <hr />
+<!--Peter Sayson-->
     <h2>Peter Sayson</h2>
     <p>
        Air Force - Program Analyst <br />
@@ -54,6 +66,7 @@
        Phone: 202 815 0175 <br/>
     </p>
 <hr />
+<!--Eric Jensen-->
     <h2>Eric Jensen</h2>
     <p>
        Professional - JSI (IT Manager) <br />
@@ -61,6 +74,7 @@
        Phone: 410 855 2191 <br />
     </p>
 <hr />
+<!--Carlo Domingo-->
     <h2>Carlo Domingo</h2>
     <p>
         Isl Enterprises - Cybersecurity Manager <br />
@@ -73,6 +87,7 @@
 <footer>
     <p></p>© Kurt Berglund . All Rights Reserved.</p>
 </footer>
+
 
 
 
