--- a/Documents/References.html
+++ b/Documents/References.html
@@ -18,10 +18,25 @@
 <h1>References</h1>
 <hr />
 <hr />
+<!--Raymond Nwanety-->
+    <h2>Raymond Nwanety</h2>
+    <p>
+        Professional - Powertek (Team Lead/Supervisor) <br/>
+        Email:enwanety@gmail.com <br />
+        Phone: 240 418 4418<br />
+    </p>
+<hr />
+<!--Mariamna Van Culin-->
+    <h2>Mariamna Van Culin</h2>
+    <p>
+       Professional - JSI (Chief Financial Officer) <br />
+       Email: mvcandc@gmail.com <br />
+       Phone: 410 725 4741 <br />
+<hr />
 <!--Sergio Marroquin-->
     <h2>Sergio Marroquin</h2>
     <p>
-        Professional - NIST (Service Desk Operations) <br/>
+        Professional - Powertek (Service Desk Analyst) <br/>
         Email:smarr714@gmail.com <br />
         Phone: 240 715 2237<br />
     </p>
@@ -87,6 +102,7 @@
 <footer>
     <p></p>© Kurt Berglund . All Rights Reserved.</p>
 </footer>
+
 
 
 
