--- a/index.html
+++ b/index.html
@@ -87,8 +87,23 @@
         <p>June 2024 - Present</p>
         <ul>
             <li>Juniper to Cisco switch migration for all lab environments</li>
+                <ul>
+                    <li>Transpose Juniper configuration to Cisco Configuration</li>
+                    <li>Deployed new Cisco Access switches and recabling</li>
+                    <li>Decommission Old Juniper Devices after retention period</li>
+                </ul>
             <li>Setup lab networks per requests</li>
-            <li>Administer, Maintain and configure all Linux Servers (Redhat)</li>
+                <ul>
+                    <li>Assign Public facing IP address to allow lab traffic to gain internet access (Paloalto)</li>
+                    <li>Assign vlans for lab and apply to applicable network devices</li>
+                    <li>Modify security policies on the Firewall (Juniper SRX) for securing lab traffic</li>
+                    <li>Create Wireless SSID per lab request (Aruba)</li>
+                </ul>
+            <li>Administer, Maintain and configure Windows Servers and Linux Servers (Redhat)</li>
+                <ul>
+                    <li>Apply security patches</li>
+                    <li>Build and configure per customer requirements in VMWare</li>    
+                </ul>
             <li>Assisted with reviewing and maintaining security policies on Paloalto and Cisco Firepowers</li>
             <li>Assist with redesigning and rebuilding network infrastructure</li>
                 <ul>
@@ -310,6 +325,7 @@
                 
 </body>
 </html>
+
 
 
 
