--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <ul>
             <li>Juniper to Cisco switch migration for all lab environments</li>
                 <ul>
-                    <li>Transpose Juniper configuration to Cisco Configuration</li>
-                    <li>Deployed new Cisco Access switches and recabling</li>
-                    <li>Decommission Old Juniper Devices after retention period</li>
+                    <li>Transpose Juniper configuration to Cisco configuration</li>
+                    <li>Deployed new Cisco access switches and recabling</li>
+                    <li>Decommission old Juniper devices after retention period</li>
                 </ul>
             <li>Setup lab networks per requests</li>
                 <ul>
@@ -325,6 +325,7 @@
                 
 </body>
 </html>
+
 
 
 
