--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <h2>Summary/Objective</h2>
     <p>
         Innovative IT Specialist with 10+ years experience who is able to perform Systems Administration tasks   
-        on Windows and Linux Servers. Knowledged and with some experience with programming/scripting languages 
-        like HTML, CSS, Java, Python, Powershell and bash. Involvement with security task such as remediating
-        vulnerabilities found in Nessus and Splunk using management tools like SCCM and BigFix. 
-        Seeking for an opportunity to level up and learn new skills in various IT Technology. 
+        on Windows and Linux Servers. Worked with variety of networking equipment to support network infrastructures.
+        Knowledged and with some experience with programming/scripting languages like HTML, CSS, Java, Python, Powershell and bash. 
+        Involvement with security task such as remediating vulnerabilities found in Nessus and Splunk using management tools like SCCM and BigFix. 
+        Always seeking for an opportunity to level up and learn new skills in various IT Technology. 
         Demonstrated Team player and hardworker. Easily trained and ability to learn quickly.
     </p>
     <hr />
@@ -325,6 +325,7 @@
                 
 </body>
 </html>
+
 
 
 
