--- a/index.html
+++ b/index.html
@@ -105,11 +105,14 @@
                     <li>Build and configure per customer requirements in VMWare</li>    
                 </ul>
             <li>Assisted with reviewing and maintaining security policies on Paloalto and Cisco Firepowers</li>
-            <li>Assist with redesigning and rebuilding network infrastructure</li>
+            <li>Involved with planning of rebuilding the network infrastructure for NCCoE. (Ongoing project)</li>
                 <ul>
                     <li>Spine Leaf architecture with VMWare NSX</li>
+                    <li>Migrating Juniper SRX firewall to Cisco Firepower.</li>
+                    <li>Migrating Juniper Aggregation switch to Cisco Nexus switch.</li>
                     <li>Replacing Juniper Network devices with Cisco devices on NCCoE production Networks</li>
                     <li>Replace Aruba wireless system with Meraki Wireless system</li>
+                    <li>Upgrade border router – the router which is responsible for connectivity between NIST and NCCoE</li>
                 </ul>
             <li>Administer Aruba Wireless Network</li>
             <li>Assisted with troubleshooting VPN Access for remote users (Global Protect and RSA SecureID)</li>
@@ -121,6 +124,7 @@
             <li>Assisted Audio/Video Engineer with Extron Devices and networking. Conference room setups</li>
             <li>Monitor Networked assets using Solarwinds and VMWare Operations for Logs</li>
             <li>Onboarding process for Lab Users/Collaborators (Network access, AD Accounts, ServiceNow Accounts, GPO</li>
+            <li>Assist with OKTA integration to applications at NCCoE – With the assistance of the OKTA administrator at NIST and 3rd party vendors.</li>
         </ul>
     </ul>
     <br />
@@ -325,6 +329,7 @@
                 
 </body>
 </html>
+
 
 
 
