--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <br />
     <h2>Summary/Objective</h2>
     <p>
-        Innovative IT Specialist with 10+ years experience who is able to perform Systems Administration tasks   
-        on Windows and Linux Servers. Worked with variety of networking equipment to support network infrastructures.
-        Knowledged and with some experience with programming/scripting languages like HTML, CSS, Java, Python, Powershell and bash. 
-        Involvement with security task such as remediating vulnerabilities found in Nessus and Splunk using management tools like SCCM and BigFix. 
-        Always seeking for an opportunity to level up and learn new skills in various IT Technology. 
-        Demonstrated Team player and hardworker. Easily trained and ability to learn quickly.
+        Innovative IT Specialist with 10+ years’ experience who can perform Systems Administration tasks
+        on Windows and Linux Servers. Worked with variety of networking equipment to support network
+        infrastructures. Knowledge and with some experience with programming/scripting languages like 
+        HTML, CSS, Java, Python, PowerShell and bash. Involvement with security task such as 
+        remediating vulnerabilities found in Nessus and Splunk using management tools like SCCM and 
+        BigFix. Always seeking for an opportunity to level up and learn new skills in various IT Technology. 
+        Demonstrated Team player and hard worker. Easily trained and ability to learn quickly.
     </p>
     <hr />
 <!--Educations-->
@@ -48,20 +49,19 @@
 <!--Skills and Knowledge-->
     <h2>Skills and Knowlege</h2>
     <ul>
-        <li><b>IT Management:</b> Technical Writing / Documentation, Leadership and Supervision, Communication,
+        <li><b>IT Management:</b> Technical Writing/Documentation, Leadership and Supervision, Communication,
                Project Management, Time Management, Strategic Thinking, Human and Interpersonal Management</li>
         <br />
-        <li><b>Operating Systems:</b> Windows Server 2022, Windows 11, MacOS, Kali, centOS, Redhat, Suse, IOS, Android,
-               Junos</li>
+        <li><b>Operating Systems:</b> Windows Server 2022, Windows 11, MacOS, Kali, CentOS, Redhat, SUSE, IOS, Android, Junos</li>
         <br />
         <li><b>Desktop Applications:</b> MS Office, MS Access, Visio, Adobe Acrobat, Libre Office, Photoshop, 
                Internet Explorer, Firefox, Chrome, Tor, Windows Media Player, VLC, iTunes, Thunderbird, Slack, Visual Studio Code, 
                Zoom</li>
         <br />
-        <li><b>Administration and Networking:</b> Active Directory, DNS. DHCP, Exchange, Office365, LAN, WAN, WLAN, 
-               SQL Server, TCP/IP, SonicWALL, Cisco Routers and Switches, Cisco ASA, Cisco Meraki, Patching and Cabling (Ethernet), 
-               VMWare, Hyper-V, Sun xVM Virtual Box, Microsoft Virtual PC, WSUS, IIS, Azure, Business Desktop Deployment (BDD), 
-               SCCM, Citrix, SCOM, VxRail, Intune, BigFix, Zscaler, Airwatch, Infoblox, Solarwinds Orion, Ansible</li>
+        <li><b>Administration and Networking:</b> Active Directory, DNS. DHCP, Exchange, Office365, LAN, WAN, WLAN, SQL Server, TCP/IP, 
+            SonicWALL, Cisco Routers and Switches, Cisco ASA, Cisco Meraki, Patching and Cabling (Ethernet), VMWare, Hyper-V, Sun xVM Virtual Box, 
+            Microsoft Virtual PC, WSUS, IIS, Azure, Business Desktop Deployment (BDD), SCCM, Citrix, SCOM, VxRail, Intune, BigFix, 
+            Zscaler, AirWatch, Infoblox, SolarWinds Orion, Ansible</li>
         <br />
         <li><b>Security Applications and Pentest tools:</b> Splunk, Nessus, Nmap, Wireshark, Hydra McAfee VirusScan Enterprise, 
                Proofpoint, Endpoint Encryption, Entrust, Bitlocker, RSA, CyberArc, Crowdsdtrike</li>
@@ -329,6 +329,7 @@
                 
 </body>
 </html>
+
 
 
 
