--- a/Documents/References.html
+++ b/Documents/References.html
@@ -99,10 +99,11 @@
     </p>   
 <hr />
 <br />
-<a href="../index.html">Back to My resume</a>
+<a href="../index.html">Back to Kurt's resume</a>
 <footer>
     <p></p>© Kurt Berglund . All Rights Reserved.</p>
 </footer>
+
 
 
 
