--- a/Documents/contact.html
+++ b/Documents/contact.html
@@ -22,7 +22,7 @@
   USA <br />
 </p>
 <br />
-<a href="../index.html">Back to My resume</a>
+<a href="../index.html">Back to Kurt's resume</a>
 
 <footer>
   <p></p>© Kurt Berglund . All Rights Reserved.</p>
